Adding Structure for Signing

--- a/Cryptography/ECC/ECDSA.ipynb
+++ b/Cryptography/ECC/ECDSA.ipynb
@@ -81,6 +81,52 @@
     "# public_key, private_key = generate_key_pair()\n",
     "# validate_public_key(public_key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inverse(num, mod):\n",
+    "    return pow(num, mod-2, mod)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sign(message, common=common):\n",
+    "    s = None\n",
+    "    r = None\n",
+    "    while not s:\n",
+    "        while not r:\n",
+    "            # getting a pseudo random number\n",
+    "            k = random.randint(1, common.n-1)\n",
+    "\n",
+    "            # using the x coordinate of the new point\n",
+    "            r = (k*common.x).value % common.n\n",
+    "        \n",
+    "        # Done finding k and r\n",
+    "        \n",
+    "        e = int(hashlib.sha512(message.encode()).hexdigest(), 16)\n",
+    "        d = random.randint(1, common.n-1)\n",
+    "        s = (e + d*r)*inverse(k, common.n) % common.n\n",
+    "    \n",
+    "    return r, s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def verify():\n",
+    "    pass"
+   ]
   }
  ]
 }
